# game-template

./: .gitignore  AUTHORS  ChangeLog  NEWS  OpenGL.sln  OpenGL.vcxproj  README.md  config.h.in  configure.ac  game-template.sln  game-template.vcxproj  game-template.vcxproj.filters
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  coord.h  grid2d.c  grid3d.c  main.c  point2d.c  point3d.c  poly3d.c  prim.h  wglcontext.c  wglcontext.h
src/: Makefile.am  main.c
src/assets/: assets.h  font.c  menu_texture.c
src/audio/: hhh
src/graphics/: Makefile.am
src/graphics/contexts/: Makefile.am  glcontext.c  glcontext.h  glxcontext.c  glxcontext.h  wglcontext.c  wglcontext.h
src/graphics/objects/: actor.c  actor.h  collision_index.h  hedrons.c  hedrons.h  node.c  node.h  prisms.c  prisms.h  scene.c  scene.h  texture.c  texture.h
src/graphics/primitives/: Makefile.am  collision.h  coord.h  point2d.c  point3d.c  poly2d.c  poly3d.c  prim.h  vect.c  vect.h
src/input/: Makefile.am  glxevent.c  input.c  input.h  joystick.c  joystick.h  joystick_evdev.c  wglevent.c
src/modes/: actor_test.c  actor_test.h  diamond.c  diamond.h  logos.c  logos.h  map.c  map.h  modes.c  modes.h  sandbox.c  sandbox.h  scene_test.c  scene_test.h  stage.c  stage.h  titlescreen.c  titlescreen.h
src/modes/actor_test/: nodes.h
src/modes/actor_test/actors/: cube.c  tetrahedron.c
src/modes/actor_test/nodes/: camera.c  environment.c  player.c
src/modes/actor_test_obj/: actors.h  nodes.h
src/modes/actor_test_obj/actors/: person.c  tetrahedron.c  triangle.c
src/modes/actor_test_obj/nodes/: box.c  camera.c  collectible.c  environment.c  orbit.c  player.c
src/modes/archived/: map.h  scene_test.c  scene_test.h  stage.c
src/modes/logos_obj/: actors.h  nodes.h
src/modes/logos_obj/nodes/: plane.c
src/scene/: actor.c  actor.h  collision.h  collision_index.c  collision_index.h  node.c  node.h  scene.c  scene.h  texture.c  texture.h
src/util/: macros.h  veccomp.c  veccomp.h
