bin_PROGRAMS = main
main_SOURCES = \
	graphics/contexts/glxcontext.c \
	graphics/objects/actor.c \
	graphics/objects/collision_index.c \
	graphics/objects/hedrons.c \
	graphics/objects/node.c \
	graphics/objects/prisms.c \
	graphics/objects/scene.c \
	graphics/objects/texture.c \
	graphics/primitives/collision/collision_box.c \
	graphics/primitives/collision/collision_router.c \
	graphics/primitives/grid2d.c \
	graphics/primitives/grid3d.c \
	graphics/primitives/point2d.c \
	graphics/primitives/point3d.c \
	graphics/primitives/poly2d.c \
	graphics/primitives/poly3d.c \
	input/glxevent.c \
	modes/actor_test.c \
	modes/actor_test/actors/cube.c \
	modes/actor_test/actors/tetrahedron.c \
	modes/actor_test/nodes/environment.c \
	modes/actor_test/nodes/camera.c \
	modes/actor_test/nodes/player.c \
	util/veccomp.c \
	main.c
#old_SOURCES = \
	modes/diamond.c \
	modes/map.c \
	modes/sandbox.c \
	modes/scene_test.c \
	modes/stage.c
main_LDFLAGS = -lX11
