bin_PROGRAMS = main
main_SOURCES = \
	graphics/contexts/glxcontext.c \
	graphics/primitives/grid2d.c \
	graphics/primitives/grid3d.c \
	graphics/primitives/point2d.c \
	graphics/primitives/point3d.c \
	graphics/primitives/poly2d.c \
	graphics/primitives/poly3d.c \
	graphics/primitives/vect.c \
	input/glxevent.c \
	modes/actor_test.c \
	modes/actor_test_obj/actors/cube.c \
	modes/actor_test_obj/actors/tetrahedron.c \
	modes/actor_test_obj/nodes/environment.c \
	modes/actor_test_obj/nodes/camera.c \
	modes/actor_test_obj/nodes/orbit.c \
	modes/actor_test_obj/nodes/player.c \
	scene/actor.c \
	scene/collision/collision_box.c \
	scene/collision/collision_router.c \
	scene/node.c \
	scene/scene.c \
	scene/texture.c \
	main.c
main_LDFLAGS = -lX11
